@@ -14,7 +14,7 @@ Version 2.16
   10210, 10545, 10716, 11174, 11322, 11365, 11494, 12047, 13058, 13525,
   13526, 13527, 13528, 13529, 13530, 13531, 13532, 13533, 13547, 13551,
   13552, 13553, 13555, 13559, 13583, 13618, 13637, 13656, 13695, 13704,
-  13706, 13726, 13738, 13786, 13792
+  13706, 13726, 13738, 13786, 13792, 13806
 
 * ISO C11 support:
 
